--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 .header{
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .logo{
@@ -20,14 +21,22 @@ body{
 ul{
     list-style-type: none;
     display: flex;
-    gap: 5px;
+    gap: 15px;
 }
 
 .intro-container{
-    
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.hero-main{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
 }
 
 ul,
 .hero-text{
     font-size: 18px;
+    color: #E5E7EB;
 }
