--- a/style.css
+++ b/style.css
@@ -26,7 +26,24 @@ ul{
 
 .intro-container{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+
+.hero{
+    width: 500px;
+    height: 200px;
     flex-wrap: wrap;
+    align-items: center;
+    margin-right: 75px;
+}
+
+img{
+    width: 500px;
+    height: 200px;
+    background-color: grey;
+    text-align: center;
 }
 
 .hero-main{
