--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
 
 .container-top{
     background-color: #1F2937;
+    margin-bottom: 50px;
 }
 
 .header{
@@ -90,11 +91,34 @@ img{
     align-items: center;
     justify-content: center;
     gap: 50px;
+    margin-bottom: 50px;
 }
 
 .image-info{
     max-width: 200px;
     text-align: center;
     color: rgb(88, 88, 88);
+}
+
+.quote-container{
+    background-color: #E5E7EB;
+    padding: 100px 200px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+}
+
+.quote{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote-by{
+    font-weight: bold;
+    align-self: flex-end;
+    color: black;
+    font-size: 20px;
 }
 
