--- a/style.css
+++ b/style.css
@@ -150,5 +150,14 @@ button.call-sign-up{
     font-size: 20px;
 }
 
+.footer{
+    height: 90px;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 
